styles for popover

--- a/SingularityUI/app/styles/table.styl
+++ b/SingularityUI/app/styles/table.styl
@@ -101,3 +101,7 @@ table.files-table
     
     tr td:first-child span.glyphicon
         margin-right 1em
+
+.popover
+    font-size 12px
+    width 230px
