--- a/SingularityUI/app/templates/vex/slaveReactivate.hbs
+++ b/SingularityUI/app/templates/vex/slaveReactivate.hbs
@@ -1,9 +1,9 @@
 <p>
-	Are you sure you want to cancel decommission and reactivate this slave??
+	Are you sure you want to cancel decommission and reactivate this {{ type }}??
 </p>
 
 <pre>{{ id }}</pre>
 
 <p>
-	Reactivating a slave will cancel the decommission without erasing the slaves history and move it back to the active state.
+	Reactivating a {{ type }} will cancel the decommission without erasing the {{ type }}''s history and move it back to the active state.
 </p>
