--- a/SingularityUI/app/templates/racks/rack.hbs
+++ b/SingularityUI/app/templates/racks/rack.hbs
@@ -5,7 +5,7 @@
                 <th>ID</th>
                 <th>Current State</th>
                 <th>Uptime</th>
-                {{#ifInSubFilter data.[0].state 'DECOMMISSIONING,DECOMMISSIONED,STARTING_DECOMMISSION'}}
+                {{#ifInSubFilter data.[0].state 'DECOMISSIONING,DECOMMISSIONING,DECOMMISSIONED,DECOMISSIONED,STARTING_DECOMMISSION,STARTING_DECOMISSION'}}
                     <th>Decommissioned By</th>
                 {{/ifInSubFilter}}
                 {{#ifInSubFilter data.[0].state 'ACTIVE'}}
@@ -20,18 +20,20 @@
                     <td>{{ id }}</td>
                     <td>{{ state }}</td>
                     <td data-value="{{ uptime }}">{{timestampDuration uptime}}</td>
-                    {{#ifInSubFilter state 'ACTIVE,DECOMMISSIONING,DECOMMISSIONED,STARTING_DECOMMISSION'}}
+                    {{#ifInSubFilter state 'ACTIVE,DECOMISSIONING,DECOMMISSIONING,DECOMMISSIONED,DECOMISSIONED,STARTING_DECOMMISSION,STARTING_DECOMISSION'}}
                         <td>{{ user }}</td>
                     {{/ifInSubFilter}}
                     <td class="actions-column">
-                        {{#ifInSubFilter state 'DECOMMISSIONING,DECOMMISSIONED,STARTING_DECOMMISSION'}}
+                        {{#ifInSubFilter state 'DECOMISSIONING,DECOMMISSIONING,DECOMMISSIONED,DECOMISSIONED,STARTING_DECOMMISSION,STARTING_DECOMISSION'}}
                             <a data-rack-id="{{ id }}" data-state="{{ state }}" data-action="reactivate" title="Reactivate">
                                 <span class="glyphicon glyphicon-new-window"></span>
                             </a>
                         {{/ifInSubFilter}}
-                        <a data-rack-id="{{ id }}" data-state="{{ state }}" data-action="decommission" title="Decommission">
-                            <span class="glyphicon glyphicon-trash"></span>
-                        </a>
+                            {{#ifInSubFilter state 'ACTIVE'}}
+                            <a data-rack-id="{{ id }}" data-state="{{ state }}" data-action="decommission" title="Decommission">
+                                <span class="glyphicon glyphicon-trash"></span>
+                            </a>
+                        {{/ifInSubFilter}}
                         <a data-rack-id="{{ id }}" data-state="{{ state }}" data-action="remove" title="Remove">
                             <span class="glyphicon glyphicon-remove"></span>
                         </a>
