--- a/SingularityUI/app/templates/slaves/slave.hbs
+++ b/SingularityUI/app/templates/slaves/slave.hbs
@@ -41,10 +41,11 @@
                             <a data-slave-id="{{ id }}" data-state="{{ state }}" data-action="decommission" title="Decommission">
                                 <span class="glyphicon glyphicon-trash"></span>
                             </a>
+                        {{else}}
+                            <a data-slave-id="{{ id }}" data-state="{{ state }}" data-action="remove" title="Remove">
+                                <span class="glyphicon glyphicon-remove"></span>
+                            </a>
                         {{/ifInSubFilter}}
-                        <a data-slave-id="{{ id }}" data-state="{{ state }}" data-action="remove" title="Remove">
-                            <span class="glyphicon glyphicon-remove"></span>
-                        </a>
                     </td>
                 </tr>
             {{/each}}
