add indicator and filter for decommissioning tasks on taskTable page

--- a/SingularityUI/app/templates/tasksTable/tasksBase.hbs
+++ b/SingularityUI/app/templates/tasksTable/tasksBase.hbs
@@ -10,6 +10,9 @@
             <li {{#ifEqual tasksFilter "cleaning"}}class="active"{{/ifEqual}}>
                 <a href="{{appRoot}}/tasks/cleaning">Cleaning</a>
             </li>
+            <li {{#ifEqual tasksFilter "decommissioning"}}class="active"{{/ifEqual}}>
+                <a href="{{appRoot}}/tasks/decommissioning">Decommissioning</a>
+            </li>
         </ul>
     </div>
 </div>
