fix styles for popover

--- a/SingularityUI/app/styles/table.styl
+++ b/SingularityUI/app/styles/table.styl
@@ -98,10 +98,21 @@
         margin-bottom 0
 
 table.files-table
-    
+
     tr td:first-child span.glyphicon
         margin-right 1em
 
-.popover
+.table-header-popover
+    font-weight normal
+    text-align center
     font-size 12px
-    width 230px
+    width 18em
+
+    .popover-content
+        padding 6px
+
+    p
+        margin-bottom 0
+
+th #schedule
+    display block
