--- a/SingularityUI/app/templates/dockerForms/portMap.hbs
+++ b/SingularityUI/app/templates/dockerForms/portMap.hbs
@@ -12,7 +12,7 @@
 
     <div class="form-group required">
         <label for="cont-port-{{ timestamp }}">Container Port</label>
-        <input type="text" id="cont-port-{{ tiemstamp }}" class="cont-port form-control">
+        <input type="text" id="cont-port-{{ timestamp }}" class="cont-port form-control">
     </div>
 
     <div class="form-group required">
@@ -25,11 +25,11 @@
 
     <div class="form-group required">
         <label for="host-port-{{ timestamp }}">Container Port</label>
-        <input type="text" id="host-port-{{ tiemstamp }}" class="host-port form-control">
+        <input type="text" id="host-port-{{ timestamp }}" class="host-port form-control">
     </div>
 
     <div class="form-group">
         <label for="protocal-{{ timestamp }}">Protocol</label>
-        <input type="text" id="protocol-{{ tiemstamp }}" class="protocol form-control" placeholder="default: tcp">
+        <input type="text" id="protocol-{{ timestamp }}" class="protocol form-control" placeholder="default: tcp">
     </div>
 </div>
