Add Url subview. Parse environment variables into key-value attribute of taskHistory. Fix consistency of taskBase.hbs.

--- a/SingularityUI/app/templates/taskDetail/taskBase.hbs
+++ b/SingularityUI/app/templates/taskDetail/taskBase.hbs
@@ -1,14 +1,18 @@
 <div class='task-detail detail-view row'>
-    <div id="overview" class='col-md-12'>
+    <div id='overview' class='col-md-12'>
         {{! Overwritten by subview }}
-        <div class="page-loader centered cushy"></div>
+        <div class='page-loader centered cushy'></div>
     </div>
 
-    <div id="history" class='col-md-12'>
+    <div id='history' class='col-md-12'>
         
     </div>
 
-    <div id="file-browser" class='col-md-12'>
+    <div id='urls' class='col-md-12'>
+
+    </div>
+
+    <div id='file-browser' class='col-md-12'>
         
     </div>
 
