--- a/SingularityUI/app/assets/_index.mustache
+++ b/SingularityUI/app/assets/_index.mustache
@@ -28,8 +28,11 @@
             defaultMemory: {{{defaultMemory}}},
             slaveHttpPort: {{{slaveHttpPort}}},
             {{#slaveHttpsPort}}
-            slaveHttpsPort: {{{slaveHttpsPort}}}
+            slaveHttpsPort: {{{slaveHttpsPort}}},
             {{/slaveHttpsPort}}
+            {{#customQuickLinks}}
+            customQuickLinks: {{{customQuickLinks}}}
+            {{/customQuickLinks}}
         };
     </script>
     <script src="{{{staticRoot}}}/js/app.js"></script>
