Rename to taskQuickLinks. Create TaskQuickLink class. Use .emptyList() instead of new LinkedList.

--- a/SingularityUI/app/assets/_index.mustache
+++ b/SingularityUI/app/assets/_index.mustache
@@ -30,9 +30,9 @@
             {{#slaveHttpsPort}}
             slaveHttpsPort: {{{slaveHttpsPort}}},
             {{/slaveHttpsPort}}
-            {{#customQuickLinks}}
-            customQuickLinks: {{{customQuickLinks}}}
-            {{/customQuickLinks}}
+            {{#taskQuickLinks}}
+            taskQuickLinks: {{{taskQuickLinks}}}
+            {{/taskQuickLinks}}
         };
     </script>
     <script src="{{{staticRoot}}}/js/app.js"></script>
