dont use hubspot-flavored swagger plugin anymore

--- a/SingularityUI/app/assets/api-docs/markdown.mustache
+++ b/SingularityUI/app/assets/api-docs/markdown.mustache
@@ -4,12 +4,12 @@ Version: {{apiVersion}}
 
 Endpoints:
 {{#apiDocuments}}
-- [`{{resourcePath}}`](#{{anchor}}) - {{description}}
+- `{{resourcePath}}` - {{description}}
 {{/apiDocuments}}
 
 Models:
 {{#dataTypes}}
-- [`{{name}}`](#{{anchor}})
+- `{{name}}`
 {{/dataTypes}}
 {{^dataTypes}}
 - *none*
