filters for new request types, new request page for new types

--- a/SingularityUI/app/templates/requestsTable/requestsActiveBody.hbs
+++ b/SingularityUI/app/templates/requestsTable/requestsActiveBody.hbs
@@ -52,7 +52,7 @@
                             </a>
                         </td>
                         <td>
-                            {{ request.requestType}}
+                            {{humanizeText request.requestType}}
                         </td>
                         <td class="visible-lg visible-xl centered">
                             {{ request.instances }}
