--- a/SingularityUI/app/templates/newRequest.hbs
+++ b/SingularityUI/app/templates/newRequest.hbs
@@ -21,34 +21,37 @@
             <label>Type</label>
 
             <div id="type" class="btn-group">
-                <button data-type="service" class="btn btn-default">
+                <button data-type="SERVICE" class="btn btn-default">
                     Service
                 </button>
-                <button data-type="worker" class="btn btn-default">
+                <button data-type="WORKER" class="btn btn-default">
                     Worker
                 </button>
-                <button data-type="scheduled" class="btn btn-default">
+                <button data-type="SCHEDULED" class="btn btn-default">
                     Scheduled
                 </button>
-                <button data-type="on-demand" class="btn btn-default">
+                <button data-type="ON_DEMAND" class="btn btn-default">
                     On-demand
+                </button>
+                <button data-type="RUN_ONCE" class="btn btn-default">
+                    Run-once
                 </button>
             </div>
         </div>
 
-        <div id="service-expandable" class="row expandable hide">
+        <div id="SERVICE-expandable" class="row expandable hide">
             <div class="col-sm-4">
                 <div class="form-group">
-                    <label for="instances-service" class="col-sm-6">Instances</label>
+                    <label for="instances-SERVICE" class="col-sm-6">Instances</label>
                     <div class="col-sm-6">
-                        <input type="text" id="instances-service" class="form-control" placeholder="1">
+                        <input type="text" id="instances-SERVICE" class="form-control" placeholder="1">
                     </div>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="form-group">
-                    <label for="rack-sensitive-service">
-                        <input type="checkbox" id="rack-sensitive-service">
+                    <label for="rack-sensitive-SERVICE">
+                        <input type="checkbox" id="rack-sensitive-SERVICE">
                         Rack sensitive
                     </label>
                 </div>
@@ -63,26 +66,26 @@
             </div>
         </div>
 
-        <div id="worker-expandable" class="row expandable hide">
+        <div id="WORKER-expandable" class="row expandable hide">
             <div class="col-sm-4">
                 <div class="form-group">
-                    <label for="instances-worker" class="col-sm-6">Instances</label>
+                    <label for="instances-WORKER" class="col-sm-6">Instances</label>
                     <div class="col-sm-6">
-                        <input type="text" id="instances-worker" class="form-control" placeholder="1">
+                        <input type="text" id="instances-WORKER" class="form-control" placeholder="1">
                     </div>
                 </div>
             </div>
             <div class="col-sm-6">
                 <div class="form-group">
-                    <label for="rack-sensitive-worker">
-                        <input type="checkbox" id="rack-sensitive-worker" checked>    
+                    <label for="rack-sensitive-WORKER">
+                        <input type="checkbox" id="rack-sensitive-WORKER" checked>    
                         Rack sensitive
                     </label>
                 </div>
             </div>
         </div>
 
-        <div id="scheduled-expandable" class="expandable hide">
+        <div id="SCHEDULED-expandable" class="expandable hide">
             <div class="form-group required">
                 <label for="schedule">Schedule</label>
                 <input type="text" id="schedule" class="form-control" placeholder="eg: */5 * * * *">
