--- a/SingularityUI/app/templates/requestsTable/requestsAllBody.hbs
+++ b/SingularityUI/app/templates/requestsTable/requestsAllBody.hbs
@@ -55,7 +55,7 @@
                             </a>
                         </td>
                         <td>
-                            {{ request.requestType}}
+                            {{humanizeText request.requestType}}
                         </td>
                         <td>
                             {{humanizeText state}}
