--- a/SingularityUI/app/templates/requestsTable/requestsFilter.hbs
+++ b/SingularityUI/app/templates/requestsTable/requestsFilter.hbs
@@ -1,20 +1,32 @@
 <ul class="nav nav-pills nav-pills-multi-select">
-    <li {{#unlessInSubFilter 'daemon' requestsSubFilter}}class="active"{{/unlessInSubFilter}}>
-        <a data-filter="daemon">
+    <li {{#unlessInSubFilter 'SERVICE' requestsSubFilter}}class="active"{{/unlessInSubFilter}}>
+        <a data-filter="SERVICE">
             <span class="glyphicon glyphicon-ok"></span>
-            Daemon
+            Service
         </a>
     </li>
-    <li {{#unlessInSubFilter 'ondemand' requestsSubFilter}}class="active"{{/unlessInSubFilter}}>
-        <a data-filter="ondemand">
+    <li {{#unlessInSubFilter 'WORKER' requestsSubFilter}}class="active"{{/unlessInSubFilter}}>
+        <a data-filter="WORKER">
+            <span class="glyphicon glyphicon-ok"></span>
+            Worker
+        </a>
+    </li>
+    <li {{#unlessInSubFilter 'SCHEDULED' requestsSubFilter}}class="active"{{/unlessInSubFilter}}>
+        <a data-filter="SCHEDULED">
+            <span class="glyphicon glyphicon-ok"></span>
+            Scheduled
+        </a>
+    </li>
+    <li {{#unlessInSubFilter 'ON_DEMAND' requestsSubFilter}}class="active"{{/unlessInSubFilter}}>
+        <a data-filter="ON_DEMAND">
             <span class="glyphicon glyphicon-ok"></span>
             On-demand
         </a>
     </li>
-    <li {{#unlessInSubFilter 'scheduled' requestsSubFilter}}class="active"{{/unlessInSubFilter}}>
-        <a data-filter="scheduled">
+    <li {{#unlessInSubFilter 'RUN_ONCE' requestsSubFilter}}class="active"{{/unlessInSubFilter}}>
+        <a data-filter="RUN_ONCE">
             <span class="glyphicon glyphicon-ok"></span>
-            Scheduled
+            Run-once
         </a>
     </li>
 </ul>
