--- a/SingularityUI/app/assets/api-docs/markdown.mustache
+++ b/SingularityUI/app/assets/api-docs/markdown.mustache
@@ -4,12 +4,12 @@ Version: {{apiVersion}}
 
 Endpoints:
 {{#apiDocuments}}
-- `{{resourcePath}}` - {{description}}
+- [`{{resourcePath}}`](#endpoint-{{index}}) - {{description}}
 {{/apiDocuments}}
 
 Models:
 {{#dataTypes}}
-- `{{name}}`
+- [`{{name}}`](#model-{{name}})
 {{/dataTypes}}
 {{^dataTypes}}
 - *none*
@@ -19,7 +19,7 @@ Models:
 
 ## Endpoints
 {{#apiDocuments}}
-### {{resourcePath}}
+### <a name="#endpoint-{{index}}"></a> {{resourcePath}}
 {{#description}}
 #### Overview
 {{{description}}}
@@ -39,7 +39,7 @@ Models:
 | Parameter | Required | Description | Data Type |
 |-----------|----------|-------------|-----------|
 {{#paras}}
-| {{ name }} | {{ required }} | {{ description }} | {{#linkType}}<a href="#{{linkType}}">{{type}}</a>{{/linkType}}{{^linkType}}{{type}}{{/linkType}} |
+| {{ name }} | {{ required }} | {{ description }} | {{#linkType}}[{{type}}](#model-linkType)</a>{{/linkType}}{{^linkType}}{{type}}{{/linkType}} |
 {{/paras}}
 {{/parameters}}
 {{^parameters}}
@@ -56,7 +56,7 @@ Models:
 | Status Code | Reason      | Response Model |
 |-------------|-------------|----------------|
 {{#errorResponses}}
-| {{code}}    | {{message}} | {{#linkType}}[{{type}}](#{{linkType}}){{/linkType}}{{^linkType}}{{#type}}{{{type}}}{{/type}}{{^type}}-{{/type}}{{/linkType}} |
+| {{code}}    | {{message}} | {{#linkType}}[{{type}}](#model-{{linkType}}){{/linkType}}{{^linkType}}{{#type}}{{{type}}}{{/type}}{{^type}}-{{/type}}{{/linkType}} |
 {{/errorResponses}}
 {{^errorResponses}}
 | - | - | - |
@@ -90,18 +90,18 @@ Models:
 ## Data Types
 {{#dataTypes}}
 
-## {{name}}
+## <a name="model-{{name}}"></a> {{name}}
 
 | name | type | required | description |
 |------|------|----------|-------------|
 {{#items}}
-| {{name}} | {{#linkType}}<a href="#{{linkType}}">{{type}}</a>{{/linkType}}{{^linkType}}{{type}}{{/linkType}} | {{#required}}required{{/required}}{{^required}}optional{{/required}} | {{#description}}{{{description}}}{{/description}}{{#allowableValue}} Allowable values: {{.}}{{/allowableValue}} |
+| {{name}} | {{#linkType}}<a href="#model-{{linkType}}">{{type}}</a>{{/linkType}}{{^linkType}}{{type}}{{/linkType}} | {{#required}}required{{/required}}{{^required}}optional{{/required}} | {{#description}}{{{description}}}{{/description}}{{#allowableValue}} Allowable values: {{.}}{{/allowableValue}} |
 {{/items}}
 
 {{/dataTypes}}
 
 {{#enumTypes}}
-<a name="#enum-{{name}}"></a>
+<a name="#model-{{name}}"></a>
 ## {{name}}
 {{#allowableValues}}
 {{.}}
