Rename Java uses of taskQuickLinks as a String to taskQuickLinksJSON. Remove unnecessary @JsonPropertys.

--- a/SingularityUI/app/assets/_index.mustache
+++ b/SingularityUI/app/assets/_index.mustache
@@ -30,9 +30,9 @@
             {{#slaveHttpsPort}}
             slaveHttpsPort: {{{slaveHttpsPort}}},
             {{/slaveHttpsPort}}
-            {{#taskQuickLinks}}
-            taskQuickLinks: {{{taskQuickLinks}}}
-            {{/taskQuickLinks}}
+            {{#taskQuickLinksJSON}}
+            taskQuickLinks: {{{taskQuickLinksJSON}}}
+            {{/taskQuickLinksJSON}}
         };
     </script>
     <script src="{{{staticRoot}}}/js/app.js"></script>
